Bug 1185183 - Don't replace edited URL value with old completed value [r=mak]